# aitoolbox

./: MANIFEST.in  README.md  catalogue.json  pyproject.toml
aitoolbox_aims_lib/: pyproject.toml
aitoolbox_aims_lib/src/aitoolbox/: __init__.py  context.py  datatypes.py  destinations.py  sources.py
aitoolbox_aims_lib/src/aitoolbox/datatypes/: rest_decoder.py
aitoolbox_support_lib/: pyproject.toml
aitoolbox_support_lib/src/aitoolbox/: sources.py
aitoolbox_support_lib/tests/: test.ipynb
artifacts/: main.py
doc/: aitutil.md  notebook.md  tools.md
scripts/: aitutil.py  deploy_rest.js  generate_source.js
src/aitoolbox/: __main__.py  aitutil.py
src/aitoolbox/artifacts/: main.py
src/aitoolbox/skeleton/: README.md  config.ai  query.ipynb
src/aitoolbox/skeleton/.deploy/: docker-compose.yml
src/aitoolbox/skeleton/.deploy/service/: Dockerfile  requirements.txt
src/aitoolbox/skeleton/doc/: BP.md
src/aitoolbox/skeleton/test/: example.http
