[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aitoolbox"
version = "0.0.1"
authors = [
  { name="Gergely Hollósi", email="hollosi.gergely@vik.bme.hu" },
]
description = "AIMS 5.0 AI Toolbox"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "more_itertools",
    "PyYAML"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
